--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
 body {
-    margin: 10px;    
+    margin: 10px;  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    background-color: gray;
+ 
 }
