--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center; 
-    background-color: gray;
+    background-color: rgb(228, 198, 198);
+
  
 }
